force-app/main/default/objects/Contact_Master__c/Contact_Master__c.object-meta.xml
<CustomObject>
    <label>Contact Master</label>
    <pluralLabel>Contact Masters</pluralLabel>
    <description>The unified profile. One row per human, the CRM-side mirror of the Data 360 unified profile and the system of record the services read.</description>
</CustomObject>