force-app/main/default/objects/Contact_Master__c/fields/DoNotMarket__c.field-meta.xml
<CustomField>
    <fullName>DoNotMarket__c</fullName>
    <label>Do Not Market</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>