force-app/main/default/objects/Contact_Master__c/fields/Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Flag__c</fullName>
    <label>Duplicate_Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>