force-app/main/default/objects/Contact_Master__c/fields/LastEngagedAt__c.field-meta.xml
<CustomField>
    <fullName>LastEngagedAt__c</fullName>
    <label>Last Engaged At</label>
    <type>DateTime</type>
</CustomField>