force-app/main/default/objects/Contact_Master__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>Last Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>