force-app/main/default/objects/Contact_Master__c/fields/LastSyncedAt__c.field-meta.xml
<CustomField>
    <fullName>LastSyncedAt__c</fullName>
    <label>Last Synced At</label>
    <type>DateTime</type>
</CustomField>