force-app/main/default/objects/Contact_Master__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>LeadSource  c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition><value><fullName>Web</fullName><label>Web</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>App</fullName><label>App</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Import</fullName><label>Import</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>CallCentre</fullName><label>CallCentre</label></value></valueSetDefinition>
        <valueSetDefinition><value><fullName>Campaign</fullName><label>Campaign</label></value></valueSetDefinition>
    </valueSet>
</CustomField>