force-app/main/default/objects/Contact_Master__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <type>Text</type>
    <length>20</length>
</CustomField>