force-app/main/default/objects/Contact_Master__c/fields/ProfileMatchRate__c.field-meta.xml
<CustomField>
    <fullName>ProfileMatchRate__c</fullName>
    <label>Profile Match Rate</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>