force-app/main/default/objects/Contact_Master__c/fields/TimeZone_Offset__c.field-meta.xml
<CustomField>
    <fullName>TimeZone_Offset__c</fullName>
    <label>Time Zone_Offset</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>